# allie-flowkit-python

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  index.html  pyproject.toml  requirements.txt  robots.txt  setup.py  sitemap.xml  versions.json
.github/: CODEOWNERS  labeler.yml
.github/workflows/: ci_cd.yml
app/: __init__.py  app.py  fastapi_utils.py
app/config/: __init__.py  _config.py  config.py
app/endpoints/: __init__.py  splitter.py
app/models/: __init__.py  functions.py  splitter.py
configs/: config.yaml
doc/: Makefile  make.bat
doc/source/: conf.py  contributing.rst  index.rst
doc/source/getting_started/: index.rst
doc/styles/config/vocabularies/ANSYS/: accept.txt
docker/: Dockerfile
src/allie/flowkit/: __init__.py  __main__.py  fastapi_utils.py  flowkit_service.py
src/allie/flowkit/config/: __init__.py  _config.py
src/allie/flowkit/endpoints/: __init__.py  splitter.py
src/allie/flowkit/models/: __init__.py  functions.py  splitter.py
src/allie/flowkit/utils/: __init__.py  decorators.py
tests/: __init__.py  conftest.py  test_endpoints_splitter.py  test_list_functions.py
tests/test_files/: test_presentation.pptx
version/: index.html
version/0.1/: index.html  objects.inv  search.html  searchindex.js
version/0.1/_sources/api/: index.rst.txt
version/0.1/_sources/api/src/allie/flowkit/config/: index.rst.txt
version/0.1/_sources/api/src/allie/flowkit/endpoints/: index.rst.txt
version/0.1/_sources/api/src/allie/flowkit/flowkit_service/: index.rst.txt
version/0.1/_sources/api/src/allie/flowkit/models/: index.rst.txt
version/0.1/_sources/api/src/allie/flowkit/models/splitter/: index.rst.txt
version/0.1/_sources/api/src/allie/flowkit/utils/: index.rst.txt
version/0.1/_sources/api/src/allie/flowkit/utils/decorators/: index.rst.txt
version/0.1/api/: index.html
version/0.1/api/src/allie/flowkit/endpoints/: index.html
version/0.1/api/src/allie/flowkit/models/functions/: EndpointInfo.html  FunctionCategory.html  ParameterInfo.html  index.html
version/0.1/api/src/allie/flowkit/models/splitter/: SplitterRequest.html  index.html
version/0.1/api/src/allie/flowkit/utils/: index.html
version/0.1/examples/: index.html
version/0.1/getting_started/: index.html
version/dev/: contributing.html  genindex.html  index.html  py-modindex.html  search.html
version/dev/_sources/api/src/allie/flowkit/__main__/: index.rst.txt
version/dev/_sources/api/src/allie/flowkit/fastapi_utils/: index.rst.txt
version/dev/_sources/api/src/allie/flowkit/models/functions/: FunctionCategory.rst.txt  ParameterInfo.rst.txt  index.rst.txt
version/dev/_sources/api/src/allie/flowkit/models/splitter/: SplitterRequest.rst.txt  SplitterResponse.rst.txt
version/dev/_sources/examples/: index.rst.txt
version/dev/_sources/user_guide/: index.rst.txt
version/dev/api/: index.html
version/dev/api/src/allie/flowkit/: index.html
version/dev/api/src/allie/flowkit/__main__/: index.html
version/dev/api/src/allie/flowkit/config/: index.html
version/dev/api/src/allie/flowkit/endpoints/: index.html
version/dev/api/src/allie/flowkit/endpoints/splitter/: index.html
version/dev/api/src/allie/flowkit/fastapi_utils/: index.html
version/dev/api/src/allie/flowkit/flowkit_service/: index.html
version/dev/api/src/allie/flowkit/models/: index.html
version/dev/api/src/allie/flowkit/models/functions/: EndpointInfo.html  FunctionCategory.html  ParameterInfo.html  index.html
version/dev/api/src/allie/flowkit/models/splitter/: SplitterRequest.html  SplitterResponse.html  index.html
version/dev/api/src/allie/flowkit/utils/: index.html
version/dev/api/src/allie/flowkit/utils/decorators/: index.html
version/dev/examples/: index.html
version/dev/getting_started/: index.html
version/dev/user_guide/: index.html
version/stable/: contributing.html  genindex.html  index.html  py-modindex.html
version/stable/_sources/api/src/allie/flowkit/: index.rst.txt
version/stable/_sources/api/src/allie/flowkit/endpoints/splitter/: index.rst.txt
version/stable/_sources/api/src/allie/flowkit/models/functions/: EndpointInfo.rst.txt
version/stable/api/src/allie/flowkit/: index.html
version/stable/api/src/allie/flowkit/__main__/: index.html
version/stable/api/src/allie/flowkit/config/: index.html
version/stable/api/src/allie/flowkit/endpoints/splitter/: index.html
version/stable/api/src/allie/flowkit/fastapi_utils/: index.html
version/stable/api/src/allie/flowkit/flowkit_service/: index.html
version/stable/api/src/allie/flowkit/models/: index.html
version/stable/api/src/allie/flowkit/models/splitter/: SplitterResponse.html
version/stable/api/src/allie/flowkit/utils/decorators/: index.html
version/stable/user_guide/: index.html
